--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@ font-family: Georgia, 'Times New Roman', Times, serif;
  }
  
  .container {
-  max-width: 70%;
+  width: 70%;
   margin: 0 auto;
   padding: 200px 1rem;
 }
@@ -52,6 +52,8 @@ a{
 .mb{
   margin-bottom:100px ;
 }
+
+
 
 @media (max-width: 768px) {
   .container {
