--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@ font-family: Georgia, 'Times New Roman', Times, serif;
 
  body{
   background-color: rgb(63, 62, 62);
+  transition: all 0.5s ease-in-out;
  }
  
  .container {
@@ -36,6 +37,7 @@ a{
   flex-direction: column;
   flex-grow: 0;
   align-items: flex-start;
+ 
 }
 
 .pdf-content:hover{
